# opencode-telegram-bot

./: .gitignore  CLAUDE.md  Cargo.toml  RECOMMENDATIONS.md  flake.nix  package.json  result  tsconfig.json
.claude/: feedback_nix_conventions.md  feedback_rust_conventions.md
docs/: architecture.md  deploy.md  development.md  todo-claude.md
nix/: example.nix  module.nix  package.nix
src/: access.rs  access.ts  config.rs  config.ts  download.rs  download.ts  index.ts  main.rs  markdown.rs  markdown.ts  message.rs  message.ts  models.rs  models.ts  opencode.rs  session.rs  session.ts  sse.rs  stream.rs  stream.ts  telegram.rs
