[package]
name = "opencode-telegram-bot"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Telegram bot frontend for opencode"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.9"
regex = "1"
bytes = "1"
futures-util = "0.3"
